<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_centerInParent="true"
    android:layout_margin="20dp">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/register"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"
                  android:textSize="30sp"
                  android:textAlignment="center"
                  android:layout_marginBottom="20dp"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/email"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/et_email"
                  android:hint="@string/email"
                  android:inputType="textEmailAddress"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/password"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/et_password"
                  android:hint="@string/password"
                  android:inputType="textPassword"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/fullname"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/et_fullname"
                  android:hint="@string/fullname"
                  android:inputType="text"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/address"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/et_address"
                  android:hint="@string/address"
                  android:inputType="text"/>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/register"
                android:id="@+id/btn_register"/>
    </LinearLayout>

</RelativeLayout>