<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".LoginActivity">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_centerInParent="true"
    android:layout_margin="20dp">
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/login"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/email"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/et_email"
                  android:hint="@string/email"
                  android:inputType="textEmailAddress"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:text="@string/password"
                  android:textStyle="bold"
                  android:textColor="@android:color/black"/>
        <EditText android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:id="@+id/et_password"
                  android:hint="@string/password"
                  android:inputType="textPassword"/>

        <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                  android:gravity="right"
                  android:layout_marginBottom="5dp"
                  android:text="@string/belum_register"
                  android:textStyle="italic"
                  android:id="@+id/btn_register"
                  android:layout_marginTop="10dp"
                  android:textColor="@android:color/holo_red_light"/>

        <Button android:layout_width="match_parent" android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/btn_login"/>
    </LinearLayout>

</RelativeLayout>