<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
            android:background="@android:color/darker_gray"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".DetailActivity">

        <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:layout_width="match_parent" android:layout_height="200dp"
                       android:id="@+id/image_detail"
                       android:scaleType="centerCrop"/>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                      android:id="@+id/name_detail"
                      android:textSize="25sp"
                      android:padding="10dp"
                      android:textStyle="bold"
                      android:text="@string/title"
                      android:layout_alignParentBottom="true"
                      android:textColor="@android:color/white"
                      android:background="@android:color/black"/>
        </RelativeLayout>

        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:layout_margin="25dp">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/address_detail"
                      android:textSize="16sp"
                      android:text="@string/address"
                      android:textColor="@android:color/black"/>
            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:id="@+id/detail_detail"
                      android:textSize="14sp"
                      android:text="@string/description"
                      android:textStyle="italic"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
